# stellar-zk

./: .gitignore  DOC.md  README.md  SCRIPTS.md  demo-video-script.md  gen_rust.mjs  package-lock.json  package.json  pnpm-lock.yaml  vectors.txt
circuits/: private_swap.circom  shield.circom  unshield.circom
circuits/ceremony/: CEREMONY.md  setup.sh
circuits/ceremony/keys/: private_swap.vkey.json  shield.vkey.json  unshield.vkey.json
circuits/lib/: merkle.circom  note.circom  nullifier.circom
circuits/scripts/: export-fixtures.js
circuits/test/: helpers.js  merkle.spec.js  merkle_test.circom  note.spec.js  note_test.circom  nullifier.spec.js  nullifier_test.circom  private_swap.spec.js  roundtrip.spec.js  shield.spec.js  unshield.spec.js
cli/: .mocharc.json  E2E.md  package-lock.json  package.json  tsconfig.json
cli/scripts/: e2e-testnet.sh
cli/src/: api.ts  chain.ts  config.ts  crypto.ts  encode.ts  index.ts  notes.ts  prover.ts  store.ts
cli/src/types/: circomlibjs.d.ts  snarkjs.d.ts
cli/test/: api.spec.ts  chain.spec.ts  crypto.spec.ts  notes.spec.ts  prover.spec.ts  prover_swap.spec.ts
contracts/: Cargo.toml  DEPLOYMENTS.md
contracts/groth16_verifier/: Cargo.toml
contracts/groth16_verifier/src/: lib.rs  test.rs
contracts/groth16_verifier/src/testdata/: shield.json
contracts/groth16_verifier/test_snapshots/test/: verifies_real_shield_proof.1.json
contracts/poseidon_probe/: Cargo.toml
contracts/poseidon_probe/src/: constants.rs  field.rs  lib.rs  manual.rs  test.rs
contracts/scripts/: deploy-pool-testnet.sh  make-invoke-args.js
contracts/shielded_pool/: Cargo.toml
contracts/shielded_pool/src/: lib.rs  merkle.rs  test.rs
contracts/shielded_pool/src/poseidon/: constants.rs  mod.rs
fixtures/: shield.calldata.json  shield.proof.json  shield.public.json
tools/: bn254-encode.js  emit-all-vkeys.js  emit-verifier-fixtures.js
tools/test/: bn254-encode.spec.js
tools/vkeys/: private_swap.vk.json  shield.vk.json  unshield.vk.json
