[workspace]
resolver = "2"
# shielded_pool is re-added by a later task once that crate exists.
members = ["groth16_verifier"]

[workspace.dependencies]
soroban-sdk = "25"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
panic = "abort"
codegen-units = 1
lto = true
