[package]
name = "poseidon_probe"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
light-poseidon-nostd = { version = "0.4.1", default-features = false }
ark-bn254 = { version = "0.5", default-features = false, features = ["curve"] }
ark-ff = { version = "0.5", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
hex = "0.4"
