[package]
name = "poseidon_probe"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
# Field arithmetic is hand-vendored (see src/field.rs): no ark, no light-poseidon,
# no big-int crate. Keeps the wasm tiny and deployable to Soroban testnet.
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
hex = "0.4"
